--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     </head>
     <body>
-        <div class="container">
+        <div class="container-fluid">
             <!-- Add Jumbotron to Header -->
             <div class="jumbotron text-center">
                 <h1>Mission to Mars</h1>
@@ -21,7 +21,7 @@
                 <div class="col-md-12">
                 <div class="media">
                     <div class="media-body">
-                        <h2>Latest Mars News</h2>
+                        <h2><u>Latest Mars News</u></h2>
                         <h4 class="media-heading">{{mars.news_title}}</h4>
                         <p>{{mars.news_p}}</p>
                     </div>
@@ -33,13 +33,13 @@
             <div class="row" id="mars-featured-image">
                 <!-- Second level -->
                 <div class="col-md-8">
-                    <h2>Featured Mars Image</h2>
+                    <h2><u>Featured Mars Image</u></h2>
                     <img src="{{ mars.featured_image }}" class="img-responsive" alt="Responsive image"/>
                 </div>
                 <!-- Mars Facts -->
                 <div class="col-md-4">
                     <div class="row" id="mars-facts">
-                        <h4>Mars Facts</h4>
+                        <h4><u>Mars Facts</u></h4>
                         {{ mars.facts | safe }}
                     </div>
                 </div>
